<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_color">

        <LinearLayout
            android:id="@+id/login_setting_userinfo_ll_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#202225"
            android:orientation="vertical"
            android:paddingVertical="68dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_setting_userinfo_title"
                android:textColor="@color/login_title_color_c8c8c8"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_set_info_second_title"
                android:textColor="#FF636466"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_setting_userinfo_ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/login_setting_userinfo_ll_title">

            <TextView
                android:id="@+id/login_setting_userinfo_nickname_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:text="@string/login_setting_userinfo_user_name"
                android:textColor="#8F9092"
                android:textSize="@dimen/sp_14" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_setting_userinfo_nickname_et"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/rgb32363b_r8"
                android:paddingHorizontal="16dp"
                android:maxLines="1"
                android:maxLength="20"
                android:hint="@string/login_setting_userinfo_user_name_hit"
                android:textColorHint="#FF53575D"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="别担心，以后你随时可以修改您的信息"
                android:textColor="#44474F"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/login_setting_userinfo_user_gender"
                android:textColor="#8F9092"
                android:textSize="@dimen/sp_14" />

            <RadioGroup
                android:id="@+id/login_user_gender_rg_men"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/login_user_gender_rb_men"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/selector_orange_corners_8"
                    android:button="@null"
                    android:checked="true"
                    android:drawableTop="@mipmap/ic_user_gender_men"
                    android:gravity="center"
                    android:padding="@dimen/dp_10"
                    android:textSize="0dp" />

                <RadioButton
                    android:id="@+id/login_user_gender_rb_women"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/selector_orange_corners_8"
                    android:button="@null"
                    android:drawableTop="@mipmap/ic_user_gender_women"
                    android:gravity="center"
                    android:padding="@dimen/dp_10"
                    android:textSize="0dp" />

                <RadioButton
                    android:id="@+id/login_user_gender_rb_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_orange_corners_8"
                    android:button="@null"
                    android:drawableTop="@mipmap/ic_user_gender_other"
                    android:gravity="center"
                    android:padding="@dimen/dp_10"
                    android:textSize="0dp" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/login_setting_userinfo_tv_next"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="48dp"
            android:enabled="false"
            android:background="@drawable/bg_ef7300_99999_status_corners_8"
            android:gravity="center"
            android:text="@string/login_setting_userinfo_next"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>